--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^8.0.0",
+    "ngx-toastr": "^14.2.1",
     "nodemailer": "^6.7.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
